# libremarkable-c

./: .gitignore  Cargo.toml  Makefile  build.rs  cbindgen.toml  flake.nix
src/: lib.rs
