[package]
name = "libremarkable-c"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libremarkable = "0.6.2"
safer-ffi.version = "0.1.0-rc1"
safer-ffi.features = []

# [build-dependencies]
# cbindgen = "0.24.0"

[features]
headers = ["safer-ffi/headers"]
